--- a/catalog.html
+++ b/catalog.html
@@ -70,8 +70,59 @@
 		<section id="sec-13">
 			<div class="container">
 				<h1 class="inner">Католог товаров</h1>
-				<div class="row">
-					<div class="col-md-3">
+			</div>
+			<!-- mobile -->
+			<div class="catalog-menu mb-4">
+				<div class="container">
+					<input type="search" placeholder="Поиск..." class="font-2 f_14 w-100">
+				</div>
+				<div class="catalog-submenu">
+					<div class="container">
+						<button type="button" class="d-flex align-items-center">
+							<img src="img/icons/burger-2.svg" alt="">
+							<span class="light-gray ms-3">Категории</span>
+						</button>
+					</div>
+				</div>
+				<!-- внутри подкатегорий: -->
+				<div class="catalog-submenu">
+					<div class="container d-flex justify-content-between align-items-center">
+						<button type="button" class="d-flex align-items-center">
+							<img src="img/icons/arrow-left.svg" alt="">
+							<span class="light-gray ms-3">Шампуни и кондиционеры</span>
+						</button>
+						<button type="button" class="d-flex align-items-center">
+							<img src="img/icons/burger-2.svg" alt="">
+						</button>
+					</div>
+				</div>
+				<div class="container d-flex justify-content-between align-items-center">
+					<select class="font-2">
+						<option value="Популярное">Популярное</option>
+						<option value="По возрастанию цены">По возрастанию цены</option>
+						<option value="По убыванию цены">По убыванию цены</option>
+					</select>
+					<button type="button" class="btn-filter active d-flex align-items-center">
+						<span class="light-gray f_11">Фильтры</span>
+						<svg viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
+							<path d="M7.29692 6.25008H17.7136L12.4948 12.8126L7.29692 6.25008ZM4.43233 5.84383C6.5365 8.54175 10.4219 13.5417 10.4219 13.5417V19.7917C10.4219 20.3647 10.8907 20.8334 11.4636 20.8334H13.5469C14.1198 20.8334 14.5886 20.3647 14.5886 19.7917V13.5417C14.5886 13.5417 18.4636 8.54175 20.5677 5.84383C21.099 5.15633 20.6094 4.16675 19.7448 4.16675H5.25525C4.39067 4.16675 3.90108 5.15633 4.43233 5.84383Z"/>
+						</svg>							
+					</button>
+				</div>
+			</div>
+			<div class="container">
+				<div class="row gx-xxl-5">
+					<div class="d-none d-md-block col-md-8 col-lg-9 offset-md-4 offset-lg-3 mb-5">
+						<div class="d-flex justify-content-between align-items-center">
+							<select class="f_09 font-2">
+								<option value="Популярное">Популярное</option>
+								<option value="По возрастанию цены">По возрастанию цены</option>
+								<option value="По убыванию цены">По убыванию цены</option>
+							</select>
+							<input type="search" placeholder="Поиск..." class="font-2 f_09">
+						</div>
+					</div>
+					<div class="d-none d-md-block col-md-4 col-lg-3">
 						<nav class="left-menu">
 							<div class="font-2 fw_6 f_09 mb-3">Категория:</div>
 							<ul>
@@ -79,16 +130,16 @@
 									<button type="button" data-state="off" onclick="toggle(this)">Уход за волосами</button>
 									<ul class="d-none">
 										<li>
-											<button type="button">Шампуни и кондиционеры</button>
-											<ul>
+											<button type="button" data-state="off" onclick="toggle(this)">Шампуни и кондиционеры</button>
+											<ul class="d-none">
 												<li>
 													<a href="#" class="active">Шампуни</a>
 												</li>
 												<li>
-													<button type="button">Кондиционеры</button>
+													<a href="#">Кондиционеры</a>
 												</li>
 												<li>
-													<button type="button">Бальзамы</button>
+													<a href="#">Бальзамы</a>
 												</li>
 											</ul>
 										</li>
@@ -110,83 +161,82 @@
 									<button type="button">Уход за телом</button>
 								</li>
 							</ul>
-
-							<div class="font-2 fw_6 f_09 mt-5 mb-3">Тип волос:</div>
-							<div class="ps-4 expandable-list">
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="hair-type" id="hair-type-1" value="Сухие">
-									<label for="hair-type-1" class="ms-3">Сухие</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="hair-type" id="hair-type-2" value="Тусклые">
-									<label for="hair-type-2" class="ms-3">Тусклые</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="hair-type" id="hair-type-3" value="Окрашенные">
-									<label for="hair-type-3" class="ms-3">Окрашенные</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="hair-type" id="hair-type-4" value="Сухие">
-									<label for="hair-type-4" class="ms-3">Сухие</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="hair-type" id="hair-type-5" value="Тусклые">
-									<label for="hair-type-5" class="ms-3">Тусклые</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="hair-type" id="hair-type-6" value="Окрашенные">
-									<label for="hair-type-6" class="ms-3">Окрашенные</label>
-								</div>
-							</div>
-							<button type="button" data-state="off" class="see-all ps-4 accent f_09 mt-2" onclick="toggleList(this)"></button>
-
-							<div class="font-2 fw_6 f_09 mt-5 mb-3">Бренд:</div>
-							<div class="ps-4 expandable-list">
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="brand" id="brand-1" value="Matrix">
-									<label for="brand-1" class="ms-3">Matrix</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="brand" id="brand-2" value="Otium">
-									<label for="brand-2" class="ms-3">Otium </label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="brand" id="brand-3" value="Concept">
-									<label for="brand-3" class="ms-3">Concept</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="brand" id="brand-4" value="CD">
-									<label for="brand-4" class="ms-3">CD</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="brand" id="brand-5" value="Lador">
-									<label for="brand-5" class="ms-3">Lador</label>
-								</div>
-								<div class="d-flex mb-2">
-									<input type="checkbox" name="brand" id="brand-6" value="Matrix">
-									<label for="brand-6" class="ms-3">Matrix</label>
-								</div>
-							</div>
-							<button type="button" data-state="off" class="see-all ps-4 accent f_09 mt-2" onclick="toggleList(this)"></button>
 						</nav>
-					</div>
-					<div class="col-md-9">
-						<div class="d-flex justify-content-between mb-5">
-							<select name="" id="">
-								<option value="Популярное">Популярное</option>
-								<option value="По возрастанию цены">По возрастанию цены</option>
-								<option value="По убыванию цены">По убыванию цены</option>
-							</select>
-							<input type="search" placeholder="Поиск...">
+						<div class="font-2 fw_6 f_09 mt-5 mb-3">Тип волос:</div>
+						<div class="ps-2 ps-lg-3 ps-xl-4 expandable-list">
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="hair-type" id="hair-type-1" value="Сухие">
+								<label for="hair-type-1" class="ms-1 ms-lg-2 ms-xl-3">Сухие</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="hair-type" id="hair-type-2" value="Тусклые">
+								<label for="hair-type-2" class="ms-1 ms-lg-2 ms-xl-3">Тусклые</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="hair-type" id="hair-type-3" value="Окрашенные">
+								<label for="hair-type-3" class="ms-1 ms-lg-2 ms-xl-3">Окрашенные</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="hair-type" id="hair-type-4" value="Сухие">
+								<label for="hair-type-4" class="ms-1 ms-lg-2 ms-xl-3">Сухие</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="hair-type" id="hair-type-5" value="Тусклые">
+								<label for="hair-type-5" class="ms-1 ms-lg-2 ms-xl-3">Тусклые</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="hair-type" id="hair-type-6" value="Окрашенные">
+								<label for="hair-type-6" class="ms-1 ms-lg-2 ms-xl-3">Окрашенные</label>
+							</div>
 						</div>
+						<button type="button" data-state="off" class="see-all ps-4 accent f_09 mt-2" onclick="toggleList(this)"></button>
 
+						<div class="font-2 fw_6 f_09 mt-5 mb-3">Бренд:</div>
+						<div class="ps-2 ps-lg-3 ps-xl-4 expandable-list">
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="brand" id="brand-1" value="Matrix">
+								<label for="brand-1" class="ms-1 ms-lg-2 ms-xl-3">Matrix</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="brand" id="brand-2" value="Otium">
+								<label for="brand-2" class="ms-1 ms-lg-2 ms-xl-3">Otium </label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="brand" id="brand-3" value="Concept">
+								<label for="brand-3" class="ms-1 ms-lg-2 ms-xl-3">Concept</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="brand" id="brand-4" value="CD">
+								<label for="brand-4" class="ms-1 ms-lg-2 ms-xl-3">CD</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="brand" id="brand-5" value="Lador">
+								<label for="brand-5" class="ms-1 ms-lg-2 ms-xl-3">Lador</label>
+							</div>
+							<div class="d-flex mb-2">
+								<input type="checkbox" name="brand" id="brand-6" value="Matrix">
+								<label for="brand-6" class="ms-1 ms-lg-2 ms-xl-3">Matrix</label>
+							</div>
+						</div>
+						<button type="button" data-state="off" class="see-all ps-4 accent f_09 mt-2" onclick="toggleList(this)"></button>
+					</div>
+					<div class="col-md-8 col-lg-9">
 						<div class="row g-5 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
 							<div>
 								<div class="product">
 									<img src="img/product/1.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -196,7 +246,16 @@
 									<img src="img/product/2.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -206,7 +265,16 @@
 									<img src="img/product/3.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -216,7 +284,16 @@
 									<img src="img/product/4.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -226,7 +303,16 @@
 									<img src="img/product/1.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -236,7 +322,16 @@
 									<img src="img/product/2.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -246,7 +341,16 @@
 									<img src="img/product/3.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -256,7 +360,16 @@
 									<img src="img/product/4.jpg" alt="" class="mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 									<div class="d-flex justify-content-between align-items-center">
-										<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
 								</div>
@@ -264,9 +377,9 @@
 						</div>
 
 						<button type="button" class="accent f_09 fw_5 bb_1 mx-auto mt-5">Показать еще</button>
-						<div class="row row-cols-md-2 justify-content-end mt-4">
+						<div class="row row-cols-lg-2 mt-4">
 							<div>
-								<nav aria-label="Page navigation" class="ms-0">
+								<nav aria-label="Page navigation" class="mx-auto ms-lg-0">
 									<ul class="pagination">
 										<li class="page-item"><a class="btn_main btn_xs f_08 btn_3" href="#">В начало</a></li>
 										<li class="page-item"><a class="page-link" href="#">...</a></li>
@@ -281,8 +394,8 @@
 									</ul>
 								</nav>
 							</div>
-							<div class="mt-3 mt-md-0">
-								<div class="d-flex align-items-center justify-content-center justify-content-md-end">
+							<div class="mt-3 mt-lg-0">
+								<div class="d-flex align-items-center justify-content-center justify-content-lg-end">
 									<div class="f_08 font-2 me-3">Перейти на страницу</div>
 									<input type="number" class="mini f_08 me-3">
 									<button type="button" class="f_08 btn_3 btn_main btn_xs">Перейти</button>
