--- a/index.html
+++ b/index.html
@@ -367,7 +367,16 @@
 											<img src="img/product/1.jpg" alt="" class="mb-2 mb-sm-4">
 											<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<div class="add-to-cart">
+													<div class="count-enter">
+														<button type="button" onclick="remove(this)">-</button>
+														<div class="fw_5 f_08">
+															<span class="">1</span><span> шт</span>
+														</div>
+														<button type="button">+</button>
+													</div>
+													<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+												</div>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
@@ -377,7 +386,16 @@
 											<img src="img/product/2.jpg" alt="" class="mb-2 mb-sm-4">
 											<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<div class="add-to-cart">
+													<div class="count-enter">
+														<button type="button" onclick="remove(this)">-</button>
+														<div class="fw_5 f_08">
+															<span class="">1</span><span> шт</span>
+														</div>
+														<button type="button">+</button>
+													</div>
+													<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+												</div>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
@@ -387,7 +405,16 @@
 											<img src="img/product/3.jpg" alt="" class="mb-2 mb-sm-4">
 											<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<div class="add-to-cart">
+													<div class="count-enter">
+														<button type="button" onclick="remove(this)">-</button>
+														<div class="fw_5 f_08">
+															<span class="">1</span><span> шт</span>
+														</div>
+														<button type="button">+</button>
+													</div>
+													<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+												</div>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
@@ -397,7 +424,16 @@
 											<img src="img/product/4.jpg" alt="" class="mb-2 mb-sm-4">
 											<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 											<div class="d-flex justify-content-between align-items-center">
-												<button type="button" class="btn_main f_08 btn_2 px-3 px-sm-4 py-2" data-state="off" onclick="toggleState(this)"><span></span></button>
+												<div class="add-to-cart">
+													<div class="count-enter">
+														<button type="button" onclick="remove(this)">-</button>
+														<div class="fw_5 f_08">
+															<span class="">1</span><span> шт</span>
+														</div>
+														<button type="button">+</button>
+													</div>
+													<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+												</div>
 												<div class="f_13 fw_5 black">632 ₽</div>
 											</div>
 										</div>
