--- a/catalog.html
+++ b/catalog.html
@@ -221,10 +221,10 @@
 						<button type="button" data-state="off" class="see-all ps-4 accent f_09 mt-2" onclick="toggleList(this)"></button>
 					</div>
 					<div class="col-md-8 col-lg-9">
-						<div class="row g-5 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
+						<div class="row g-3 g-sm-4 g-xxl-5 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
 							<div>
 								<div class="product">
-									<img src="img/product/1.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -239,11 +239,13 @@
 										</div>
 										<div class="f_13 fw_5 black">632 ₽</div>
 									</div>
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
+									<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
 								</div>
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/2.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -262,7 +264,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/3.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -281,7 +283,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/4.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -300,7 +302,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/1.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -319,7 +321,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/2.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -338,7 +340,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/3.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -357,7 +359,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/4.jpg" alt="" class="mb-2 mb-sm-4">
+									<img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4">
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -401,6 +403,12 @@
 									<button type="button" class="f_08 btn_3 btn_main btn_xs">Перейти</button>
 								</div>
 							</div>
+						</div>
+
+						<!-- если фильтр или поиск не нашел результат -->
+						<div class="d-flex flex-column justify-content-center align-items-center text-center py-5">
+							<div class="light-gray mb-2 mb-md-4">По Вашуму запросу ничего не найдено.</div>
+							<button type="button" class="accent">Сбросить фильтры</button>
 						</div>
 					</div>
 				</div>
@@ -488,7 +496,7 @@
 
 	<footer class="d-block d-md-none mobile">
 		<div class="container h-100 d-flex justify-content-around align-items-center">
-			<a href="index.html" class="active">
+			<a href="index.html">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M13.9999 7.22171L19.8333 12.4717V21.5834H17.4999V14.5834H10.4999V21.5834H8.16659V12.4717L13.9999 7.22171ZM13.9999 4.08337L2.33325 14.5834H5.83325V23.9167H12.8333V16.9167H15.1666V23.9167H22.1666V14.5834H25.6666L13.9999 4.08337Z"/>
 				</svg>
@@ -506,7 +514,7 @@
 				</svg>
 				<div>Услуги</div>				
 			</a>
-			<a href="catalog.html">
+			<a href="catalog.html" class="active">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M7 8.5H2V6.5H7V8.5ZM7 11.5H2V13.5H7V11.5ZM20.59 18.5L16.76 14.67C15.96 15.19 15.02 15.5 14 15.5C11.24 15.5 9 13.26 9 10.5C9 7.74 11.24 5.5 14 5.5C16.76 5.5 19 7.74 19 10.5C19 11.52 18.69 12.46 18.17 13.25L22 17.09L20.59 18.5ZM17 10.5C17 8.85 15.65 7.5 14 7.5C12.35 7.5 11 8.85 11 10.5C11 12.15 12.35 13.5 14 13.5C15.65 13.5 17 12.15 17 10.5ZM2 18.5H12V16.5H2V18.5Z"/>
 				</svg>
