--- a/catalog.html
+++ b/catalog.html
@@ -224,7 +224,7 @@
 						<div class="row g-3 g-sm-4 g-xxl-5 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
 							<div>
 								<div class="product">
-									<img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -245,7 +245,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -264,7 +264,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -283,7 +283,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -302,7 +302,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -321,7 +321,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -340,7 +340,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
@@ -359,7 +359,7 @@
 							</div>
 							<div>
 								<div class="product">
-									<img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4">
+									<a href="product.html"><img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 									<div class="d-flex justify-content-between align-items-center">
 										<div class="add-to-cart">
