--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 								<div class="swiper-wrapper">
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4">
+											<a href="product.html"><img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 											<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
 											<div class="d-flex justify-content-between align-items-center">
 												<div class="add-to-cart">
@@ -383,7 +383,7 @@
 									</div>
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4">
+											<a href="product.html"><img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 											<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
 											<div class="d-flex justify-content-between align-items-center">
 												<div class="add-to-cart">
@@ -402,7 +402,7 @@
 									</div>
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4">
+											<a href="product.html"><img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 											<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
 											<div class="d-flex justify-content-between align-items-center">
 												<div class="add-to-cart">
@@ -421,7 +421,7 @@
 									</div>
 									<div class="swiper-slide">
 										<div class="product">
-											<img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4">
+											<a href="product.html"><img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
 											<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
 											<div class="d-flex justify-content-between align-items-center">
 												<div class="add-to-cart">
