--- a/team.html
+++ b/team.html
@@ -485,12 +485,12 @@
 					<ul>
 						<li><a href="index.html">Главная</a></li>
 						<li><a href="">Запись</a></li>
-						<li><a href="">Услуги</a></li>
-						<li><a href="">Акции</a></li>
-						<li><a href="">каталог</a></li>
-						<li><a href="">Команда</a></li>
-						<li><a href="">О нас</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="services.html">Услуги</a></li>
+						<li><a href="offers.html">Акции</a></li>
+						<li><a href="catalog.html">каталог</a></li>
+						<li><a href="team.html">Команда</a></li>
+						<li><a href="about.html">О нас</a></li>
+						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
 			</div>
